--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -29,7 +29,7 @@
                 android:id="@+id/chat_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/user_name"
+                android:text="@string/email"
                 android:maxLines="1"
                 android:textColor="#424242"
                 android:textStyle="bold"
