--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -10,7 +10,7 @@
     tools:context=".view.fragment.accountSign.SignInFragment">
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/sign_in_username"
+        android:id="@+id/sign_in_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:boxBackgroundMode="filled"
@@ -32,7 +32,7 @@
             android:background="@drawable/input"
             android:fadingEdge="horizontal"
             android:fadingEdgeLength="10dp"
-            android:hint="@string/user_name"
+            android:hint="@string/email"
             android:inputType="textEmailAddress"
             android:paddingLeft="15dp"
             android:paddingTop="15dp"
@@ -60,7 +60,7 @@
         app:hintTextColor="?attr/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sign_in_username"
+        app:layout_constraintTop_toBottomOf="@+id/sign_in_email"
         app:passwordToggleEnabled="true"
         app:passwordToggleTint="#838383">
 
