login, product, cart, profile, quizzes, order

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/nav_sign_in"
-        android:title="Sign In"
-        android:icon="@android:drawable/ic_dialog_info" />
+        android:id="@+id/nav_home"
+        android:title="Home"
+        android:icon="@drawable/home" />
     <item
         android:id="@+id/nav_cart"
         android:title="Cart"
-        android:icon="@android:drawable/ic_menu_gallery" />
+        android:icon="@drawable/cart" />
     <item
-        android:id="@+id/nav_logout"
-        android:title="Log Out"
-        android:icon="@android:drawable/ic_menu_close_clear_cancel" />
+        android:id="@+id/nav_quiz"
+        android:title="Quiz"
+        android:icon="@drawable/quiz" />
 </menu>
