--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
+    <color name="textColorPrimary">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#0000FF</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="red_error">#FF0000</color>
     <color name="error">#B00020</color>
     <color name="background">#FFFFFF</color>
+    <!-- Màu chính dùng cho mục được chọn -->
+    <color name="nav_selected_color">#3F51B5</color>
+
+    <!-- Màu xám cho mục chưa chọn -->
+    <color name="nav_unselected_color">#666666</color>
+
 </resources>
