--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="blue">#0000FF</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="red_error">#FF0000</color>
+    <color name="red">#FF0000</color>
     <color name="error">#B00020</color>
     <color name="background">#FFFFFF</color>
     <!-- Màu chính dùng cho mục được chọn -->
@@ -13,5 +14,7 @@
 
     <!-- Màu xám cho mục chưa chọn -->
     <color name="nav_unselected_color">#666666</color>
+
+    <color name="nav_header_subtitle_color">#B0BEC5</color>
 
 </resources>
