--- a/app/src/main/res/layout/manager_orders.xml
+++ b/app/src/main/res/layout/manager_orders.xml
@@ -1,17 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:padding="16dp"
-    android:background="#FAFAFA">
+    android:background="#FFFFFF">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Hello Orders"
-        android:textSize="24sp"
+        android:text="List Orders"
+        android:textSize="20sp"
         android:textStyle="bold"
-        android:textColor="#333333" />
+        android:textColor="#222222"
+        android:layout_marginBottom="8dp" />
 
-</RelativeLayout>
+    <ListView
+        android:id="@+id/order_list_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+</LinearLayout>
