--- a/app/src/main/res/layout/dropdown_menu_layout.xml
+++ b/app/src/main/res/layout/dropdown_menu_layout.xml
@@ -24,6 +24,16 @@
             android:visibility="visible" />
 
         <ImageButton
+            android:id="@+id/routine_menu_item"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="8dp"
+            android:background="?attr/selectableItemBackground"
+            android:contentDescription="Go to Routine"
+            android:src="@drawable/routine"
+            android:visibility="visible" />
+
+        <ImageButton
             android:id="@+id/logout_menu_item"
             android:layout_width="48dp"
             android:layout_height="48dp"
